# sudomakeinstall

./: .gitignore  README.md
00_fourier_shift/src/: CMakeLists.txt  dv-fourier-shift.cxx
02_template_meta_mandelbrot/: mandelbrot.txt
02_template_meta_mandelbrot/src/: CMakeLists.txt  dv-template-meta-mandelbrot.cxx
02_template_meta_mandelbrot/src/include/: dv_abs.h  dv_complex.h  dv_sqrt.h
